       presence mandatory. Moves token getters to Tokens / OIDCTokens class.
       Makes BearerAccessToken cast safe.
     * Makes SerializeException unchecked.
     * Upgrades to Nimbus JOSE+JWT 4.0.
     * Upgrades to Apache Commons Lang 3.4.

version 5.0-alpha2 (2015-09-02)
     * Fixes parsing of AuthorizationRequest, AuthorizationResponse,
       AuthenticationRequest and LogoutRequest URIs with URL-encoded special
       characters in the parameter values (iss #147).
     * Adds ClaimsSet.putAll(Map<String,Object) method (iss #146).

version 5.0-alpha3 (2015-09-27)
     * Closes nimbus-jose-jwt dep range exclusively to work around Ivy range
       handling (iss #148).

version 5.0-alpha4 (2015-09-29)
     * Adds extended ClientSecretJWT and PrivateKeyJWT constructors which
       provide for JWT claims set and signing (iss #150).
     * Fixes NPE in JWTAuthenticationClaimsSet.toJWTClaimsSet.

version 5.0-alpha5 (2015-09-30)
    * Adds generic framework for client authentication verification.
    * Removes Apache Commons Codec dependency, switches to Nimbus JOSE+JWT
      for BASE64 and BASE64 URL-safe encoding and decoding.

version 5.0-alpha6 (2015-10-06)
    * Fixes parsing of custom response headers in HTTPRequest.send (iss #153).

version 5.0-alpha7 (2015-10-09)
    * Narrows JWTBearerGrant acceptance of assertions to signed JWT only.
    * Moves token_endpoint_auth_signing_alg field from OIDCClientMetadata to
      ClientMetadata to enable its use by generic OAuth 2.0 clients.
    * Adds HostnameVerifier and SSLSocketFactory support to HTTPRequest (iss
      #149).
    * Adds convenience Audience(URI) and Audience(Identifier) constructors.
    * Adds convenience Issuer(URI) and Issuer(Identifier) constructors.
    * Adds convenience ClientID(Identifier) constructor.
    * Fixes missing software_id copy in ClientMetadata copy constructor.
    * Fixes missing software_version copy in ClientMetadata copy constructor.


